--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -439,7 +439,7 @@ const newUser = createUser('Gabriel');
 TypeScript offers two options for type definitions - `type` and `interface`. As they come with some functional differences in most cases they can be used interchangeably. We try to limit syntax difference and pick one for consistency.
 
 <Rule
-  prefix="All types must be defined with `type` alias"
+  prefix="All types must be defined with type alias"
   href="https://typescript-eslint.io/rules/consistent-type-definitions/#type"
 >{`'@typescript-eslint/consistent-type-definitions': ['error', 'type']`}</Rule>
 
