--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -436,7 +436,7 @@ const newUser = createUser('Gabriel');
 
 ### Type Definition
 
-TypeScript provides two options for defining types: `type` and `interface`. As they come with some functional differences in most cases they can be used interchangeably. We try to limit syntax difference and pick one for consistency.
+TypeScript provides two options for defining types: `type` and `interface`. While these options have some functional differences, they are interchangeable in most cases. We try to limit syntax difference and pick one for consistency.
 
 <Rule
   prefix="All types must be defined with type alias"
