--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -439,7 +439,7 @@ const newUser = createUser('Gabriel');
 TypeScript provides two options for defining types: `type` and `interface`. While these options have some functional differences, they are interchangeable in most cases. To maintain consistency, choose one and use it consistently.
 
 <Rule
-  prefix="All types must be defined with type alias"
+  prefix="Define all types using type alias"
   href="https://typescript-eslint.io/rules/consistent-type-definitions/#type"
 >{`'@typescript-eslint/consistent-type-definitions': ['error', 'type']`}</Rule>
 
