--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -451,7 +451,7 @@ TypeScript provides two options for defining types: `type` and `interface`. Whil
 
 ```ts
 // ❌ Avoid interface definitions
-interface UserRole = 'admin' | 'guest'; // invalid - interface can't define (commonly used) type unions
+interface UserRole = 'admin' | 'guest'; // Invalid - interfaces can't define type unions
 
 interface UserInfo {
   name: string;
