--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -440,7 +440,7 @@ TypeScript provides two options for defining types: `type` and `interface`. Whil
 
 <Rule
   prefix="Define all types using type alias"
-  href="https://typescript-eslint.io/rules/consistent-type-definitions/#type"
+  href="https://typescript-eslint.io/rules/consistent-type-definitions"
 >{`'@typescript-eslint/consistent-type-definitions': ['error', 'type']`}</Rule>
 
 <Note>
