--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -870,8 +870,12 @@ While it's often hard to find the best name, aim to optimize code for consistenc
   <!-- prettier-ignore-end -->
 
 - **Constants**  
-  Capitalized  
-  `PRODUCT_ID`
+  Capitalized
+
+  ```ts
+  const FEATURED_PRODUCT_ID = '8f47d2a1-b13e-4d5a-a7d8-6ef1234';
+  ```
+
 - **Object constants**
 
   Singular, capitalized with const assertion.
