--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -888,7 +888,7 @@ While it's often hard to find the best name, aim to optimize code for consistenc
   } as const;
   ```
 
-  If type exist use [Type-Safe Constants With Satisfies](#type-safe-constants-with-satisfies).
+  If a type exists use [Type-Safe Constants With Satisfies](#type-safe-constants-with-satisfies).
 
   ```ts
   // OrderStatus is predefined (e.g. generated from database schema, API)
