--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -876,7 +876,7 @@ While it's often hard to find the best name, aim to optimize code for consistenc
   const FEATURED_PRODUCT_ID = '8f47d2a1-b13e-4d5a-a7d8-6ef1234';
   ```
 
-- **Object constants**
+- **Object & Array Constants**
 
   Singular, capitalized with const assertion.
 
