--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -53,15 +53,15 @@ The Style Guide assumes but is not limited to using:
 
 ## TLDR
 
-- **Embrace const assertions**. [&#11107;](#const-assertion)
+- **Embrace const assertions** for type safety and immutability. [&#11107;](#const-assertion)
 - Strive for **data immutability** using types like `Readonly` and `ReadonlyArray`. [&#11107;](#data-immutability)
-- Majority of **object properties** should be **required** (use optional sparingly). [&#11107;](#required--optional-object-properties)
+- Make the **majority of object properties required** (use optional properties sparingly). [&#11107;](#required--optional-object-properties)
 - **Embrace discriminated unions**. [&#11107;](#discriminated-union)
-- **Avoid type assertions**. [&#11107;](#type--non-nullability-assertions)
-- Strive for functions to be **pure**, **stateless** and have **single responsibility**. [&#11107;](#functions)
-- Strong emphasis to keep **naming conventions consistent and readable**. [&#11107;](#naming-conventions)
+- **Avoid type assertions** in favor of proper type definitions. [&#11107;](#type--non-nullability-assertions)
+- Strive for functions to be **pure**, **stateless**, and have **single responsibility**. [&#11107;](#functions)
+- Maintain **consistent and readable naming conventions** throughout the codebase. [&#11107;](#naming-conventions)
 - Use **named exports**. [&#11107;](#named-export)
-- Code is **organized** and **grouped by feature**. Collocate code as close as possible to where it's relevant. [&#11107;](#code-collocation)
+- **Organize code by feature** and collocate related code as close as possible. [&#11107;](#code-collocation)
 
 ## Types
 
