--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -1099,7 +1099,7 @@ const frequencies = signal.FFT();
 
 #### TSDoc Comments
 
-Unlike regular comments, [TSDoc](https://tsdoc.org/) comments are encouraged because they enhance code maintainability and developer experience. They provide structured documentation that tools like IDEs, TypeScript, API generators (Swagger/OpenAPI/GraphQL) can interpret.
+[TSDoc](https://tsdoc.org/) comments enhance code maintainability and developer experience by providing structured documentation that IDEs, TypeScript, and API tools (e.g., Swagger, OpenAPI, GraphQL) can interpret.
 
 Use TSDoc comments when documenting APIs, libraries, configuration or reusable code.
 
