--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -1101,7 +1101,7 @@ const frequencies = signal.FFT();
 
 [TSDoc](https://tsdoc.org/) comments enhance code maintainability and developer experience by providing structured documentation that IDEs, TypeScript, and API tools (e.g., Swagger, OpenAPI, GraphQL) can interpret.
 
-Use TSDoc comments when documenting APIs, libraries, configuration or reusable code.
+Use TSDoc comments when documenting APIs, libraries, configurations or reusable code.
 
 ```ts
 /**
