--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -632,7 +632,7 @@ export const parseStatus = (params: StatusParams) => {...
   href="https://typescript-eslint.io/rules/explicit-function-return-type/"
 >{`"@typescript-eslint/explicit-function-return-type": "error"`}</Rule>
 
-Consider the advantages of explicitly defining the return type of a function::
+Consider the advantages of explicitly defining the return type of a function:
 
 - **Improves Readability**: Clearly specifies what type of value the function returns, making the code easier to understand for those calling the function.
 - **Avoids Misuse**: Ensures that calling code does not accidentally attempt to use an undefined value when no return value is intended.
