--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -775,7 +775,7 @@ Examples:
   const Item = ({ role }: { role: UserRole }) => {...
   ```
 
-- Use const assertion objects when there is a strong use case for them.
+- Use const assertion objects when enumerating arbitrary values.
 
   ```ts
   // ❌ Avoid using enums
