--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -742,7 +742,7 @@ Examples:
   const isGuest = (role: UserRole) => role === 'guest';
   ```
 
-- Use const assertion arrays when you need to loop through the values.
+- Use const assertion arrays when looping through values.
 
   ```tsx
   // ❌ Avoid using enums
