--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -717,7 +717,7 @@ As rule of a thumb, try to:
 
 Examples:
 
-- Use literal types whenever possible to avoid creating runtime objects that add to the bundle size.
+- Use literal types to avoid runtime objects and reduce bundle size.
 
   ```ts
   // ❌ Avoid using enums as they increase the bundle size
