--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -709,11 +709,11 @@ The TypeScript documentation outlines several [pitfalls](https://www.typescriptl
     },
 ]`}</Rule>
 
-As rule of a thumb, try to:
+As rule of a thumb, prefer:
 
-- Use literal types whenever possible.
-- Use const assertion arrays when you need to loop through the values.
-- Use const assertion objects when there is a strong use case for them.
+- Literal types whenever possible.
+- Const assertion arrays when looping through values.
+- Const assertion objects when enumerating arbitrary values.
 
 Examples:
 
