--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -698,7 +698,7 @@ Examples:
 
 ### Enums & Const Assertion
 
-Enums are generally discouraged in the TypeScript ecosystem due to their runtime cost and quirks.  
+Enums are discouraged in the TypeScript ecosystem due to their runtime cost and quirks.  
 The TypeScript documentation outlines several [pitfalls](https://www.typescriptlang.org/docs/handbook/enums.html#const-enum-pitfalls), and recently introduced the [--erasableSyntaxOnly](https://www.typescriptlang.org/docs/handbook/release-notes/typescript-5-8.html#the---erasablesyntaxonly-option) flag to disable runtime-generating features like enums altogether.
 
 <Rule href="https://eslint.org/docs/latest/rules/no-restricted-syntax">{`'no-restricted-syntax': [
